--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,23 @@ body {
   overflow: hidden;
 }
 
+.preloader{
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  background-color: #2f2f2f;
+  z-index: 20;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.preloader img{
+  visibility: hidden;
+}
+
 a{
   text-decoration: none;
 }
