--- a/src/index.css
+++ b/src/index.css
@@ -12,11 +12,26 @@ body {
   height: 100%;
   top: 0;
   left: 0;
-  background-color: #2f2f2f;
+  background-image: url(./img/2.gif);
+  background-position: center;
+  background-repeat: no-repeat;
   z-index: 20;
   display: flex;
   justify-content: center;
   align-items: center;
+}
+
+@media screen and (min-width: 1024px) {
+  .preloader{
+    background-size: 100%;
+  }
+}
+
+.preloader .overlay{
+  background-color: #161616;
+  position: absolute;
+  width: 100%;
+  height: 100%;
 }
 
 .preloader img{
@@ -34,6 +49,16 @@ a{
   position: relative;
   height: 100vh;
   width: 100vw;
+  background-image: url(./img/1.gif);
+  background-position: center;
+  background-size: 300% 100%;
+  background-repeat: no-repeat;
+}
+
+@media screen and (min-width: 1024px) {
+  .main{
+    background-size: 100%;
+  }
 }
 
 img{
