--- a/src/index.css
+++ b/src/index.css
@@ -3,7 +3,8 @@ body {
   font-family: 'Press Start 2P', cursive !important;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  overflow: hidden;
+  overflow-x: hidden;
+  background-color: #000;
 }
 
 .preloader{
@@ -21,6 +22,7 @@ body {
   align-items: center;
 }
 
+
 @media screen and (min-width: 1024px) {
   .preloader{
     background-size: 100%;
@@ -36,6 +38,44 @@ body {
 
 .preloader img{
   visibility: hidden;
+}
+
+nav {
+  height: 50px;
+  display: flex;
+  justify-content: center;
+  position: fixed;
+  top: 30px;
+  left: 10px;
+}
+
+nav ul {
+  list-style: none;
+  display: flex;
+  align-items: center;
+  margin: 0;
+  padding: 0;
+}
+
+nav li{
+  margin: 0 10px;
+}
+
+nav a {
+  color: #fff;
+  text-decoration: none;
+  font-size: 20px;
+}
+
+nav i {
+  font-size: 2.3em;
+  margin-right: 10px;
+}
+
+nav img{
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
 }
 
 a{
@@ -61,13 +101,13 @@ a{
   }
 }
 
-img{
+/* img{
   position: absolute;
   width: 100vw;
   height: 100vh;
   top: 0;
   left: 0;
-}
+} */
 
 .main button{
   position: relative;
@@ -89,10 +129,32 @@ img{
   background-color: #777674;
 }
 
+iframe{
+  margin: 10em auto;
+  border: none;
+}
+
 @media screen and (max-width: 1024px) {
-  img{
-    width: 100%;
-    height: 100%;
-    object-position: center;
+
+  
+  iframe{
+    min-height: 43em;
+    margin: 0;
+    border: none;
+    transform: scale(1);
   }
+
+
+  .main{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+    background-image: url(./img/1.gif);
+    background-position: center;
+    background-size: 100%;
+    background-repeat: no-repeat;
+  }
+  
+
 }
